<resources>
    <string name="app_name">MonBeast</string>
    <string name="start">Start</string>
    <string name="battle">Battle</string>
    <string name="help">Help</string>
    <string name="retry">Redo</string>
    <string name="giveup">Give up</string>
    <string name="restart">Return</string>
    <string name="nego">Scout</string>
    <string name="helpBattleText">You can fight monsters in the wild in the battle. Monster monster that is displayed in blue are displayed fellow, in red letters is wild monsters. By dragging a fellow monster, you can attack a wild monster. However, because of the compatibility, so you can use the attack to assess the opponent monster.</string>
    <string name="helpNegoText">You will be able to recruit wild monsters in battle. (Twice quickly, touch the screen) Double tap of wild monster you want to scout by, the state switched to scout. I\'ll tap the screen in the batter became a scout state. I am a successful scout bar that appears below if will fill. Generally, the more monster high Lv, I am strong. I will have to get new friends fast! However, I can not be more than two dogs at the same time, to mate the monster of the same type.</string>
    <string name="helpHomeText">You can check the status of the monster, or rearranging the members out to battle, strengthened by blending, at home, you can let go. You can double-tap the monster, you can check the status of the monster. You can register a member to serve in that battle (without releasing the finger, trace the screen) and drag the monster to be a blue frame. Here you drag the monster to the red frame, can be formulated. By dragging the monster black frame, you can let go of the monster, it is recommended that you blend than let go.</string>
    <string name="helpCombineText">Formulation, you can create a powerful monster monster parent of one animal from two animals. Of the parent monster, monsters born the same species and have a higher Lv monster is born. However, there are things that are born with special abilities in the wild monsters that have not inherited ability. In order to leave the children, went back to the forest without permission, monster parent monster mates two dogs, but becomes one animal, it is recommended to advantage the battle by making mating more and more I am available.</string>
    <string name="loseText">Sorry, you lose.</string>
    <string name="missImage">Image acquisition error</string>
    <string name="timer">5:00</string>
    <string name="money">Amount earned:</string>
    <string name="negosiationSuccess">Success</string>
    <string name="negosiationMiss">Fail</string>
    <string name="pasture">Home</string>
    <string name="combination">Picture book</string>
    <string name="upgrade">Custom</string>
    <string name="result">Result</string>
    <string name="getMoney">Earnings</string>
    <string name="battleResult">Earnings</string>
    <string name="resultWin">Victory</string>
    <string name="resultLoose">Defeat</string>
    <string name="getMonster">Monster win</string>
    <string name="noticefullMonster">I can not hold any more monsters</string>
    <string name="Exit">OK</string>
    <string name="BattleMember_1">Battle</string>
    <string name="GoodByeMember">Attributable to the forest</string>
    <string name="Combine">Combination</string>
    <string name="Hold">The number of monsters</string>
    <string name="Combine_Notice">Do you want to blend these two bodies?</string>
    <string name="shelf01_name">Equipment</string>
    <string name="shelf02_name">Equipment</string>
    <string name="shelf03_name">Special</string>
    <string name="equip01_name">Comodo</string>
    <string name="equip01_context">Take it easy</string>
    <string name="equip02_name">Rizoruto</string>
    <string name="equip02_context">Determinedly</string>
    <string name="equip03_name">Legato</string>
    <string name="equip03_context">Smoothly</string>
    <string name="equip_context">Emblem is the thought that was put</string>
    <string name="appointments1_name">Facilitate formulation</string>
    <string name="appointments1_context">increases the probability of mixing occurs</string>
    <string name="appointments2_name">Inheritance promotion</string>
    <string name="appointments2_context">The probability of a more powerful skill ability is inherited rises</string>
    <string name="appointments3_name">Rank Up Promotion</string>
    <string name="appointments3_context">Probability of higher rank monsters is formulated to increase</string>
    <string name="special1_name">Kurasuchenji</string>
    <string name="special1_context">I will Kurasuchenji to Horiejji. More, HP will be strengthened. However, it will not be able to Kurasuchenji Dark Knight.</string>
    <string name="special2_name">Kurasuchenji</string>
    <string name="special2_context">I will Kurasuchenji to The Dark Knight. More attack power is strengthened. However, it will not be able to Horiejji Kurasuchenji.</string>
    <string name="upgrade_text_1">Status</string>
    <string name="upgrade_text_2">: 30 Attack Power 100: HP</string>
    <string name="upgrade_text_3">Basic skills</string>
    <string name="upgrade_text_4">Additional skills</string>
    <string name="upgrade_text_5">Basic ability</string>
    <string name="upgrade_text_6">Add ability</string>
    <string name="upgrade_text_7">Additional status</string>
    <string name="upgrade_text_8">Name</string>
    <string name="monster_no">No</string>
    <string name="monster_Lv">Level</string>
    <string name="monster_name">Tribal name</string>
    <string name="monster_stastus">Status</string>
    <string name="monster_skill">Attack skills</string>
    <string name="monster_ability">Abilities</string>
    <string name="monster_additionalAbility">Inherited ability</string>
    <string name="player01_name">Explorer</string>
    <string name="player02_name">DARK KNIGHT</string>
    <string name="player03_name">Horiejji</string>
    <string name="player04_name">Dark Lord</string>
    <string name="player05_name">Paladin</string>
    <string name="no000_name">Player</string>
    <string name="no001_name">Dragon</string>
    <string name="no002_name">Cut caused by whirlwind</string>
    <string name="no003_name">Jack o\'lantern</string>
    <string name="no004_name">Ghost</string>
    <string name="no005_name">Myrmidon</string>
    <string name="no006_name">Debiruai</string>
    <string name="no007_name">Cupid</string>
    <string name="no008_name">Fireball</string>
    <string name="no009_name">Archangel</string>
    <string name="no010_name">Remora</string>
    <string name="no011_name">Panda apprentice</string>
    <string name="no012_name">Worm</string>
    <string name="no013_name">Spirit of Spring</string>
    <string name="no014_name">Mommy</string>
    <string name="no015_name">Cat God Tsukumo</string>
    <string name="no016_name">Adventurers</string>
    <string name="no017_name">Aburonikuresu</string>
    <string name="no018_name">Fighter</string>
    <string name="no019_name">Bo Kuri</string>
    <string name="no020_name">Slime</string>
    <string name="no021_name">Principado parity</string>
    <string name="no022_name">Woman fencer</string>
    <string name="no023_name">Centaur</string>
    <string name="no024_name">Mangodora</string>
    <string name="no025_name">Madoushi black cat</string>
    <string name="no026_name">Priest</string>
    <string name="no027_name">Madoushi white cat</string>
    <string name="no028_name">Akesu</string>
    <string name="no029_name">Anomanokarisu</string>
    <string name="no030_name">Haetori grass</string>
    <string name="no031_name">Madoushi cat</string>
    <string name="no032_name">Spirit of Tea</string>
    <string name="no033_name">Queen Mommy</string>
    <string name="no034_name">Doragonoido</string>
    <string name="no035_name">Killer</string>
    <string name="no036_name">Kanabo to demon</string>
    <string name="no037_name">Kagetsu grass</string>
    <string name="no038_name">Alien</string>
    <string name="no039_name">Merman</string>
    <string name="no040_name">Snowman</string>
    <string name="no041_name">Dragon Egg</string>
    <string name="no042_name">Onimanta</string>
    <string name="no043_name">Shidazun</string>
    <string name="no044_name">Braggart</string>
    <string name="no045_name">Mountain Storm</string>
    <string name="no046_name">Mamoru crane</string>
    <string name="no047_name">Daemon</string>
    <string name="no048_name">Knocker</string>
    <string name="no049_name">Mind Fly</string>
    <string name="no050_name">Spirit of Autumn</string>
    <string name="no051_name">Fox dream</string>
    <string name="no052_name">Bulbul</string>
    <string name="no053_name">Princess</string>
    <string name="no054_name">Jack Box</string>
    <string name="no055_name">Kappa</string>
    <string name="no056_name">Schiesser</string>
    <string name="no057_name">Fairy of Water</string>
    <string name="no058_name">Mangodora ripe</string>
    <string name="no059_name">Fury</string>
    <string name="no060_name">Miketaurosu</string>
    <string name="no061_name">Gatekeeper of Hell</string>
    <string name="no062_name">Lady Ghost</string>
    <string name="no063_name">Onbonoyasu</string>
    <string name="no064_name">Shinobu</string>
    <string name="no065_name">Amitto</string>
    <string name="no066_name">Minto~uchi</string>
    <string name="no067_name">Scarecrow</string>
    <string name="no068_name">Prince Star</string>
    <string name="no069_name">Octopus tank</string>
    <string name="no070_name">Monkey King</string>
    <string name="no071_name">Gurerun</string>
    <string name="no072_name">Pan</string>
    <string name="no073_name">Troll</string>
    <string name="no074_name">armor to fight</string>
    <string name="no075_name">Kogoburin</string>
    <string name="no076_name">Goblin Axe</string>
    <string name="no077_name">Mermaid</string>
    <string name="no078_name">Dwarf</string>
    <string name="no079_name">Mammoth</string>
    <string name="no080_name">Salty Dog</string>
    <string name="no081_name">Triton</string>
    <string name="no082_name">Abel</string>
    <string name="no083_name">Main deep-sea</string>
    <string name="no084_name">Sorone</string>
    <string name="no085_name">Archeopteryx</string>
    <string name="no086_name">Night monkey</string>
    <string name="no087_name">Vampire bats</string>
    <string name="no088_name">Android</string>
    <string name="no089_name">Gangster</string>
    <string name="no090_name">Mad Mushroom</string>
    <string name="no091_name">People eating grass</string>
    <string name="no092_name">Mukuro Night</string>
    <string name="no093_name">The first one</string>
    <string name="no094_name">Opabinia</string>
    <string name="no095_name">Chaos</string>
    <string name="no096_name">Witch</string>
    <string name="no097_name">Lineman</string>
    <string name="no098_name">Snake</string>
    <string name="no099_name">Panda expert</string>
    <string name="no100_name">Gentle Ghost</string>
    <string name="no101_name">Soldier</string>
    <string name="no102_name">Goblin tank</string>
    <string name="no103_name">Seeker of darkness</string>
    <string name="no104_name">Posture</string>
    <string name="no105_name">Sieff</string>
    <string name="no106_name">Ghost</string>
    <string name="no107_name">Ririmu</string>
    <string name="no108_name">Auger</string>
    <string name="no109_name">Nandin</string>
    <string name="no110_name">Suiko</string>
    <string name="no111_name">Kobold</string>
    <string name="no112_name">Scorpion</string>
    <string name="no113_name">Gremlins</string>
    <string name="no114_name">Cat merchant</string>
    <string name="no115_name">Yukimusume</string>
    <string name="no116_name">Seekers of Light</string>
    <string name="no117_name">Daughter Lynn</string>
    <string name="no118_name">Shear</string>
</resources>