<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <org.sumoner.com.MainView
        android:id="@+id/MainView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/mainImageButtonArrowBack"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/missImage"
            android:scaleType="fitXY"
            android:src="@drawable/arrowback"
            android:visibility="visible" />

        <TextView
            android:id="@+id/mainTextSecne"
            style="@style/helpText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/a_shapes_6"
            android:gravity="center_horizontal"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/mainImageButtonArrowFront"
             android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/missImage"
            android:scaleType="fitXY"
           android:src="@drawable/arrowfront"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/mainButtonStart"
            style="@style/ButtonText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/a_shapes_5"
            android:padding="5dp"
            android:text="@string/start"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/mainButtonBattle"
                style="@style/ButtonText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/a_shapes_5"
                android:padding="5dp"
                android:text="@string/battle"
                android:visibility="visible" />

            <Button
                android:id="@+id/mainButtonPasture"
                style="@style/ButtonText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/a_shapes_5"
                android:padding="5dp"
                android:text="@string/pasture"
                android:visibility="visible" />

            <Button
                android:id="@+id/mainButtonHelp"
                style="@style/ButtonText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/a_shapes_5"
                android:padding="5dp"
                android:text="@string/help"
                android:visibility="visible" />
        </LinearLayout>
        <!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/mainButtonCombination"
                style="@style/ButtonText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/a_shapes_5"
                android:padding="5dp"
                android:text="@string/combination"
                android:visibility="visible" />

            <Button
                android:id="@+id/mainButtonUpgrade"
                style="@style/ButtonText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/a_shapes_5"
                android:padding="5dp"
                android:text="@string/upgrade"
                android:visibility="visible" />
        </LinearLayout>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mainButtonReStart"
            style="@style/ButtonText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/a_shapes_5"
            android:text="@string/restart"
            android:visibility="visible" />

        <Button
            android:id="@+id/mainButtonGiveUp"
            style="@style/ButtonText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/a_shapes_5"
            android:text="@string/giveup"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/mainTimerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mainImageTimer"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.51"
                android:background="@null"
                android:src="@drawable/timer" />

            <TextView
                android:id="@+id/mainTextTimer"
                style="@style/timerText"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:gravity="center_vertical"
                android:text="@string/timer"
                android:visibility="visible" />

            <!--
                 <ImageView
                android:id="@+id/mainImageMoney"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.51"
                android:background="@null"
                android:src="@drawable/money" />

            <TextView
                android:id="@+id/mainTextMoney"
                style="@style/moneyText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:gravity="center_vertical"
                android:text="@string/money"
                android:visibility="visible" />

            <TextView
                android:id="@+id/mainTextPocketMoney"
                style="@style/moneyText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:gravity="center_vertical|right"
                android:text="999,999,999"
                android:visibility="visible" />
            -->
        </LinearLayout>

        <ImageButton
            android:id="@+id/mainPouseImageButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="0.51"
            android:background="@null"
            android:src="@drawable/pouse" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/mainReturnImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:background="@null"
        android:src="@drawable/back" />
    <!--
    <ImageView
        android:id="@+id/mainImageOffset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="@null"
        android:src="@drawable/kazari" />
    -->

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainTabelResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TableRow>

            <TextView
                android:id="@+id/mainTextResult"
                style="@style/moneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/result"
                android:textSize="20dp"
                android:visibility="visible" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/mainContentTextPocketMoney"
                style="@style/moneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/result"
                android:textSize="30dp"
                android:visibility="visible" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/mainTitleTextGetMonster"
                style="@style/moneyText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:gravity="center_vertical|left"
                android:text="@string/getMonster"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/mainGetMonsterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/missImage"
                android:src="@drawable/dragon" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/mainButtonExit"
                style="@style/ButtonText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_span="2"
                android:background="@drawable/a_shapes_5"
                android:text="@string/Exit"
                android:visibility="visible" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/mainNegoResultMoney"
        style="@style/moneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:layout_margin="2dp"
        android:gravity="center_vertical"
        android:text="@string/negosiationSuccess"
        android:textSize="70dp"
        android:visibility="visible" />

</FrameLayout>